<resources>
    <string name="app_name">Lumineco</string>
    <string name="Stats">Statistiques</string>
    <string name="Profil_ampoule">Profil ampoule</string>
    <string name="Ajouter_ampoule">Ajouter ampoule</string>
    <string name="Quitter">Quitter</string>
    <string name="incandescent">Incandescent</string>
    <string name="halog_nes">Halogènes</string>
    <string name="fluo_compactes">Fluo Compactes</string>
    <string name="led">LED</string>
    <string name="type">Type</string>
    <string name="nom">Nom</string>
    <string name="consomation">Consommation</string>
    <string name="marque">Marque</string>
    <string name="ajouter">Ajouter</string>
    <string name="annuler">Annuler</string>
    <string name="accueil">Accueil</string>
    <string name="Meteo">Meteo</string>
    <string name="ToastSameActivity">Vous etes sur cette page</string>
    <string name="SupprAmpoule">L\'Ampoule a été supprimée</string>
    <string name="Profil_Erreur">Erreur lors de la suppression</string>
    <string name="ViewDataErreur">Probleme ou pas de valeur dans la base de données</string>
    <string name="ConfirmerSuppression">Valider suppression</string>
    <string name="API_Error">Erreur lors de l\'appel à l\'API :</string>
    <string name="AjouterAmpoule">Ampoule ajoutée</string>
    <string name="AmpouleNonAjoutée">Ampoule n\'a pas eté ajoutée verifier tout les champs</string>
    <string name="Type_Selection">SELECTIONNE UN TYPE</string>
    <string name="Bienvenue">Bienvenue sur Lumineco</string>
    <string name="Instruction">Veuillez cliquer sur le bouton meteo</string>
    <string name="nbAmpoule1">Vous possédez actuellement</string>
    <string name="nbAmpoule2">ampoules</string>
    <string name="EstimationCons">Estimation de la consommation</string>

</resources>