<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ajouter_ampoule">

    <RadioGroup
        android:id="@+id/add_type"
        android:layout_width="185dp"
        android:layout_height="214dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82">

        <RadioButton
            android:id="@+id/radiobutton_Inca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incandescent"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="395dp" />

        <RadioButton
            android:id="@+id/radiobutton_Halo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/halog_nes"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="443dp" />

        <RadioButton
            android:id="@+id/radiobutton_Com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fluo_compactes"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="491dp" />

        <RadioButton
            android:id="@+id/radiobutton_LED"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/led"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="539dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="98dp"
        android:layout_height="24dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="253dp"
        android:layout_marginRight="253dp"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/add_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_marque"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
            android:id="@+id/add_nom"
            android:layout_width="290dp"
            android:layout_height="54dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137" />

        <EditText
            android:id="@+id/add_conso"
            android:layout_width="290dp"
            android:layout_height="54dp"
            android:layout_marginTop="41dp"
            android:layout_marginBottom="37dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/consomation"
            app:layout_constraintBottom_toTopOf="@+id/add_marque"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_nom" />

        <EditText
            android:id="@+id/add_marque"
            android:layout_width="290dp"
            android:layout_height="54dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/marque"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/add_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="1dp"
        android:text="@string/annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

