<?xml version="1.0" encoding="utf-8"?>

    <!--androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceuil"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtCity"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="36sp"
        android:gravity="center"
    />

    <TextView
        android:id="@+id/txtLastUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ImageView"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/txtHumidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/txtCelsius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/meteoButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Meteo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txtJson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="InvalidId" />
    <!--android:visibility="invisible"-->

    <TextView
        android:id="@+id/Bienvenue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Bienvenue"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/Instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Instruction"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="DuplicateIds" />


</LinearLayout>